# programmazione-1-unitn

./: .gitignore  CMakeLists.txt  README.md  esercizio1  esercizio2
cpp/esercizi-autonomia/lezione-1/: 2_divisione.cpp
cpp/esercizi-lab/: 1-calcolo-cerchio.cpp  1_calcolo_cerchio.cpp  2- termometri-americani.cpp  2_termometri_americani.cpp
cpp/src/esercizi-lab/: 1_calcolo_cerchio.cpp  2_termometri_americani.cpp
cpp/src/teoria/: 1_variabili.cpp  2_input_output.cpp
cpp/teoria/: inputOutput.cpp  variabili.cpp
risorse/terminale/: g++.bash
src/: D
src/esercizi-lab/: 11_test_primo.cpp  12_sequenza_primi.cpp  14_random_array.cpp  4_tempo_da_mezzanotte.cpp  5_iva.cpp  6_secondo_grado.cpp  7_scambio_variabili.cpp  8_valore_assoluto.cpp  9_fibonacci.cpp
src/esercizi/esercizi-autonomia/: contaCifre.cpp
src/esercizi/esercizi-lab/: 10_sommatoria_pigreco.cpp  17_lettere_file.cpp  1_calcolo_cerchio.cpp  6_secondo_grado.cpp
src/esercizi/lab-exercises-eng/: 3_inverted_number.cpp  4_dices.cpp  5_risiko_attack.cpp
src/lab-exercises-eng/: 2_is_upper_with_reference.cpp  6_risiko_double_attack.cpp
src/possibile-esame/: main.txt
src/possibile-esame-2/1/: esercizio1.cpp  input.txt  output.txt
src/possibile-esame-2/3/: esercizio3.cc  pila.cc  pila.h
src/possibile-esame/1/: esercizio-non-probabile-difficile-1.cpp  esercizio1.cpp
src/possibile-esame/2/: esercizio2_2.cpp
src/probabile-esame-febbraio/1/: esercizio1.cpp  input.txt  output.txt
src/probabile-esame-febbraio/2/: esercizio2.cpp  possibile_consegna.txt
src/probabile-esame-febbraio/3/: esercizio3.cpp  possibile_consegna.txt  possibile_consegna_dota_logica.txt
src/probabile-esame-febbraio/lode/: consegna_lode.txt  koch_pseudo.cpp  lode.cpp
src/probabile-esame-gennaio/1/: esercizio1.cpp  possibile_consegna.txt
src/probabile-esame-gennaio/2/: esercizio2.cpp
src/resources/list/: list.cc  (+1 more)
src/teoria/: 10_strutture.cpp  11_liste_concatenate.cpp  1_variabili.cpp  3_istruzioni.cpp  4_puntatori.cpp  5_funzioni.cpp  6_array.cpp  7_stringhe.cpp  8_io_file.cpp  9_allocazione_dinamica.cpp
terminal/: intro.bash
terminale/: intro.bash
(+94 files in other folders)
