cmake_minimum_required(VERSION 3.23)
project(programmazione_1_unitn)

set(CMAKE_CXX_STANDARD 14)
add_executable(8_valore_assoluto src/esercizi-lab/8_valore_assoluto.cpp)
add_executable(1_uppercase src/lab-exercises-eng/1_uppercase.cpp)
add_executable(2_is_upper_with_reference src/lab-exercises-eng/2_is_upper_with_reference.cpp)
add_executable(3_inverted_number src/lab-exercises-eng/3_inverted_number.cpp)
add_executable(4_dices src/lab-exercises-eng/4_dices.cpp)
add_executable(5_risiko_attack src/lab-exercises-eng/5_risiko_attack.cpp)
add_executable(6_risiko_double_attack src/lab-exercises-eng/6_risiko_double_attack.cpp)