cmake_minimum_required(VERSION 3.23)
project(programmazione_1_unitn)

set(CMAKE_CXX_STANDARD 14)
add_executable(8_valore_assoluto src/esercizi-lab/8_valore_assoluto.cpp)
add_executable(1_uppercase src/lab-exercises-eng/1_uppercase.cpp)
add_executable(2_is_upper_with_reference src/lab-exercises-eng/2_is_upper_with_reference.cpp)
add_executable(3_inverted_number src/lab-exercises-eng/3_inverted_number.cpp)
add_executable(4_dices src/lab-exercises-eng/4_dices.cpp)
add_executable(5_risiko_attack src/lab-exercises-eng/5_risiko_attack.cpp)
add_executable(6_risiko_double_attack src/lab-exercises-eng/6_risiko_double_attack.cpp)
add_executable(9_fibonacci src/esercizi-lab/9_fibonacci.cpp)
add_executable(10_sommatoria_pigreco src/esercizi-lab/10_sommatoria_pigreco.cpp src/esercizi-lab/estrazioneMaiuscole/main.cpp)
add_executable(11_test_primo src/esercizi-lab/11_test_primo.cpp)
add_executable(12_sequenza_primi src/esercizi-lab/12_sequenza_primi.cpp)
add_executable(13_conversione_binario src/esercizi-lab/13_conversione_binario.cpp)
add_executable(contaCifre src/esercizi-autonomia/contaCifre.cpp)
add_executable(main src/simulazioni-esame/2020/1/esercizio1.cc)
add_executable(esercizio2 src/simulazioni-esame/2020/2/esercizio2.cc)
add_executable(esercizio3 src/simulazioni-esame/2020/3/esercizio3.cc)
add_executable(coda src/simulazioni-esame/2020/3/coda.cc)